# goldenpipe

./: .clinerules  .cursorrules  .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.mcp  README.md  SECURITY.md  golden-suite.json  llms.txt  pyproject.toml  server.json  smithery.yaml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pages.yml  test.yml  try-it.yml
docs/: _config.yml  index.md  llms-full.txt  llms.txt
docs/superpowers/plans/: 2026-03-26-goldenpipe-v1-implementation.md
docs/superpowers/specs/: 2026-03-25-goldenpipe-design.md  2026-03-26-goldenpipe-v1-framework-design.md
examples/: README.md  basic_pipeline.py  benchmark_suite.py  custom_pipeline.py  full_suite_demo.py  selective_stages.py
goldenpipe/: __init__.py  _api.py  decisions.py  pipeline.py
goldenpipe/a2a/: __init__.py  server.py
goldenpipe/adapters/: __init__.py  check.py  flow.py  match.py
goldenpipe/api/: server.py
goldenpipe/cli/: main.py
goldenpipe/config/: __init__.py  loader.py
goldenpipe/engine/: __init__.py  registry.py  reporter.py  resolver.py  router.py  runner.py
goldenpipe/mcp/: __init__.py  server.py
goldenpipe/models/: __init__.py  column_context.py  config.py  context.py  stage.py
goldenpipe/tui/: __init__.py  app.py
scripts/: goldenpipe_demo.ipynb
tests/: conftest.py  test_a2a.py  test_adapters.py  test_api.py  test_cli.py  test_config.py  test_decisions.py  test_mcp.py  test_models.py  test_pipeline.py  test_registry.py  test_reporter.py  test_resolver.py  test_rest.py  test_router.py  test_runner.py  test_stage.py  test_tui.py
