[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goldenpipe"
version = "0.1.0"
description = "Golden Suite orchestrator -- Check, Flow, Match in one pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Ben Severn", email = "benzsevern@gmail.com" }]
keywords = ["data-quality", "entity-resolution", "pipeline", "orchestrator", "golden-suite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "polars>=1.0",
    "typer>=0.12",
    "rich>=13.0",
    "goldencheck>=0.5.0",
    "goldenflow>=0.1.0",
    "goldenmatch>=1.2.0",
]

[project.scripts]
goldenpipe = "goldenpipe.cli.main:app"

[project.urls]
Homepage = "https://github.com/benzsevern/goldenpipe"
Repository = "https://github.com/benzsevern/goldenpipe"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
